Tambahan user ADMIN KANTOR dan revisi upload gambar pada inventory

--- a/assets/demo/default/base/sejuk-sukses-style.css
+++ b/assets/demo/default/base/sejuk-sukses-style.css
@@ -176,3 +176,8 @@ font-weight: 500;
 .m-input{
     font-size: 1.2rem !important;
 }
+
+.gambar_inventory {
+    height: auto !important;
+    width: inherit !important;
+}
